# qngng

./: README.md  pyproject.toml
qngng/: __init__.py  qngng.py
qngng/cats/: icip-f.json  icip-m.json
tests/: test_qngng.py
