# The MIT License (MIT)
#
# Copyright (c) 2020 Philippe Proulx <eepp.ca>
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'qngng'
version = '2.1.1'
description = 'The Queb name generator: next generation'
license = 'MIT'
authors = [{name = 'Philippe Proulx', email = 'eeppeliteloop@gmail.com'}]
keywords = [
    'generator',
    'quebec',
    'queb',
    'keb',
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Environment :: Console',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.12'
dependencies = [
    'typer~=0.15',
    'pydantic~=2.10',
    'msgspec~=0.19',
]

[dependency-groups]
dev = [
    'pytest~=8.3',
]

[project.scripts]
qngng = 'qngng.qngng:_app'

[project.urls]
Repository = 'https://github.com/eepp/qngng/'
'Bug tracker' = 'https://github.com/eepp/qngng/issues/'

[tool.hatch.build.targets.wheel]
packages = ['qngng']

[tool.pyright]
typeCheckingMode = 'strict'
